--- a/orion-casino-api/package.json
+++ b/orion-casino-api/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
